--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
+  },
+  "JWTSettings": {
+    "TokenKey": "VbRydm_WDC^*F4ZwHPWk?,fv+:u%D!RZCM})0DPncW,2ARPe4tHj8,?i*~R]ePLL"
   }
 }
