--- a/Client/package.json
+++ b/Client/package.json
@@ -16,11 +16,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.153",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
