--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,8 @@
     "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
