Feat: payment/strip function totally

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0b1ae5d6-dcc9-4492-8247-2bfdb8d0e310</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
