--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=store.db"
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=appuser;Password=secret;Database=store;"
   },
   "JWTSettings": {
     "TokenKey": "VbRydm_WDC^*F4ZwHPWk?,fv+:u%D!RZCM})0DPncW,2ARPe4tHj8,?i*~R]ePLL"
