--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -33,6 +33,6 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
-        - uses: appleboy/ssh-action@master
+        - uses: actions/checkout@v3
         - uses: superfly/flyctl-actions/setup-flyctl@master
         - run: flyctl deploy --remote-only
